--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portifolio</title>
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="estilo/style.css"> 
     
 </head>
 <body>
@@ -25,7 +25,7 @@
                 <a class="container__links__link" href="https://github.com/guilhermeonrails">GitHub</a>
             </div>
     </section>
-    <img src="Imagem.png" alt="Foto da Joana Santos programando">
+    <img src="imagem/Imagem.png" alt="Foto da Joana Santos programando">
     </main>
     <footer></footer>
 </body>
